Fixing some issues regarding container sizes on mobile devices

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,54 +3,67 @@ $bg-color: #08070B;
 $container-color: #24232C;
 $font-family: "JetBrains Mono", monospace;
 $title-color: #817D92;
-$almost-white:#E6E5EA;
-*{
+$almost-white: #E6E5EA;
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 @mixin setBackground($color) {
     background-color: $color;
 }
-@mixin setColor($color){
+
+@mixin setColor($color) {
     color: $color;
 }
-@mixin centerContainers(){
+
+@mixin centerContainers() {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:10px;
+    gap: 10px;
 }
-@mixin centerDiv{
+
+@mixin centerDiv {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 body {
+    width: 100%;
     height: 100vh;
     font-family: $font-family;
     @include centerContainers();
     @include setBackground($bg-color);
 }
-.title-container{
-    .title{
+
+.title-container {
+    .title {
         @include setColor($title-color)
     }
 }
-%background-class{
+
+%background-class {
     @include setBackground($container-color)
 }
-.password-container{
+
+.password-container {
     @include centerDiv();
     padding: 0 30px;
     width: 30%;
     height: 80px;
     @extend %background-class;
-    .password{
+
+    .password {
         @include setColor($almost-white);
     }
-    svg{
+
+    svg {
         cursor: pointer;
     }
 }
+
